<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">

  <!-- Package info -->
  <name>vision_python_package</name>
  <version>0.0.0</version>
  <description>This is a package created to publish and subscribe to image data streamed from a camera device on a topic using OpenCV</description>
  <maintainer email="user@todo.todo">E</maintainer>
  <license>TODO: License declaration</license>

  <!-- Package dependencies -->
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>opencv2</depend>
  <depend>image_transport</depend>
  <depend>cv_bridge</depend>
  <depend>sensor_msgs</depend>

  <!-- Test dependencies -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <!-- Build type -->
    <build_type>ament_python</build_type>

    <!-- Code Execution dependencies -->
    <exec_depend>rclpy</exec_depend>
    <exec_depend>std_msgs</exec_depend>
  </export>
</package>
